--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'what_am_i' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-orientation', :path => '../node_modules/react-native-orientation'
+
   target 'what_am_iTests' do
     inherit! :complete
     # Pods for testing
